--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_version: [8, 10, 12, 14, 16]
+        node_version: [12, 14, 16, 17]
         os:
           - ubuntu-latest
           - macos-latest
