--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://mrmlnc.com"
   },
   "engines": {
-    "node": ">=8"
+    "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
   },
   "main": "out/index.js",
   "typings": "out/index.d.ts",
@@ -36,7 +36,7 @@
     "@types/micromatch": "^4.0.0",
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.8",
+    "@types/node": "^12.20.41",
     "@types/rimraf": "^2.0.2",
     "@types/sinon": "^7.5.0",
     "compute-stdev": "^1.0.0",
